--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -161,7 +161,8 @@
             <!-- Button Group -->
             <div class="amado-btn-group mt-30 mb-100">
                  <!--<a href="#" class="btn amado-btn mb-15 core-ignore">Discount</a>-->
-                <a href="{% url 'user_app:report_view' %}"  class="btn amado-btn active core-ignore">Submit a report</a>
+                <a href="{% url 'user_app:report_view' %}"  class="btn amado-btn active core-ignore">Submit a Report</a>
+                <a href="{% url 'user_app:user_report_view' %}"  class="btn amado-btn active core-ignore">View Report</a>
             </div>
             <!-- Cart Menu -->
             <div class="cart-fav-search mb-100">
