--- a/templates/report.html
+++ b/templates/report.html
@@ -99,7 +99,7 @@
 </style>
 	<section class="contact">
 			<div class="contactForm">
-				<form method="POST" action="{url 'user_app:report_view'}"> 
+				<form method="POST" action="{% url 'user_app:report_view' %}"> 
                     {% csrf_token %} 
 					<h2>Submit Report</h2>
 					
