--- a/templates/user_report.html
+++ b/templates/user_report.html
@@ -3,11 +3,8 @@
 
  
 {% block content %} 
-
-<html>
-    <head>
         <title>Reports Table</title>
-        <style type="text/css">
+        <style>
         *{
             margin: 0;
             padding: 0;
@@ -59,8 +56,7 @@
         display: none;
     }
 }
-
-        </style>
+</style>
     </head>
     <body>
         <div class="table-container">
