--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -50,10 +50,13 @@
                             <input id="email" name="email_address" type="email" class="form-control" placeholder="Email Address" value="{{user.email}}">
                         </div>
                         <div class="row">
+                        
                             <div class="col">
                               <div class="form-group mb-3 mr-2">
+                               
                                 <label class="label text-secondary h6 small mb-0" for="street">Street</label>
-                                <input id="street" name="street" type="text" class="form-control" autofocus placeholder="Street" value="{{address.street}}">
+                                <input id="street" name="street" type="text" class="form-control" autofocus placeholder="Street" value="{{addr.street}}">
+
                               </div>
 
                             </div>
