--- a/templates/profile.html
+++ b/templates/profile.html
@@ -46,8 +46,11 @@
                         </div>
                         <div class="form-group mb-3">
                           <div class="form-group mb-3">
+                            
                             <label class="label text-secondary h6 small mb-0" for="address">Address</label>
-                            <div>{{address.street}} {{address.brgy}} {{user.cityprovince}} {{user.zipcode}}</div>
+                            {% for add in addresses %}
+                            <div>{{add.street}} {{add.brgy}} {{add.cityprovince}} {{add.zipcode}}</div>
+                            {% endfor %}
 
                         </div>
                         </div>
