--- a/templates/products.html
+++ b/templates/products.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li class="active"><a href="{% url 'user_app:search_product_view' %}">All</a></li>
                     {% for category in categories %}
-                    <li><a href="#">{{category.name}}</a></li>
+                    <li><a href="{% url 'user_app:search_product_view' %}?category={{category.name}}">{{category.name}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
@@ -119,6 +119,8 @@
                         </div>
                     </div>
                 </div>
+                {% empty %}
+                    <h3>No photos...</h3>
                 {% endfor %}
                 <!-- Single Product Area -->
                 <div class="col-12 col-sm-6 col-md-12 col-xl-6">
