--- a/templates/products.html
+++ b/templates/products.html
@@ -113,9 +113,13 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
                                 <div class="cart">
-                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="img/core-img/cart.png" alt=""></a>
+                                    <a href="{% url 'user_app:product_detail_view' %}" data-toggle="tooltip" data-placement="left" title="View Product"><img src="{% static 'img/cart.png' %}" alt=""></a>
                                 </div>
                             </div>
+                        </div>
+
+                        <div>
+
                         </div>
                     </div>
                 </div>
