--- a/templates/products.html
+++ b/templates/products.html
@@ -2,6 +2,27 @@
 {% load static %}
 
 {% block content %}
+<!-- Bootstrap Font Icon CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
+    <style>
+        .product{
+            display: inline-block;
+            min-width: 50px;
+            height: 50px;
+            color: #000;
+            padding: 0 7px !important;
+            font-size: 24px;
+            line-height: 56px;
+            font-weight: 400;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .product:hover {
+            color: #fbb710;
+        }
+    </style>
 
     <div class="shop_sidebar_area">
 
@@ -33,7 +54,7 @@
                         <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                         <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                     </div>
-                    <div class="range-price">$10 - $1000</div>
+                    <div class="range-price">10 - 1000 km</div>
                 </div>
             </div>
         </div>
@@ -98,8 +119,8 @@
                             <!-- Product Meta Data -->
                             <div class="product-meta-data">
                                 <div class="line"></div>
-                                <p class="product-price">$180</p>
-                                <a href="product-details.html">
+                                <p class="product-price">2.3km</p>
+                                <a href="{% url 'user_app:product_detail_view'%}">
                                     <h6>{{product.product_name}}</h6>
                                 </a>
                             </div>
@@ -113,7 +134,7 @@
                                     <i class="fa fa-star" aria-hidden="true"></i>
                                 </div>
                                 <div class="cart">
-                                    <a href="{% url 'user_app:product_detail_view' %}" data-toggle="tooltip" data-placement="left" title="View Product"><img src="{% static 'img/cart.png' %}" alt=""></a>
+                                    <a href="{% url 'user_app:product_detail_view' %}" class="product"data-toggle="tooltip" data-placement="left" title="View Product"><i class="bi bi-eye-fill"></i></a>
                                 </div>
                             </div>
                         </div>
