Added trade_detail.html and my-products.html

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -152,8 +152,9 @@
                 <ul>
                     <!-- <li class="{% active '/home' 'active' %}"><a href="{% url 'user_app:home_view' %}">Home</a></li> -->
                     <li class="{% active '/product/search' 'active' %}"><a href="{% url 'user_app:search_product_view' %}">Search Product</a></li>
-                    <li class="{% active '/product/search' 'active' %}"><a href="{% url 'user_app:search_product_view' %}">My Products</a></li>
-                    <li class="{% active '/my-offer' 'active' %}"><a href="{% url 'user_app:search_product_view' %}">My Offers</a></li>
+                    <li class="{% active '/my-product/search' 'active' %}"><a href="{% url 'user_app:search_myproduct_view' %}">My Products</a></li>
+                    <li class="{% active '/my-offer' 'active' %}"><a href="{% url 'user_app:my-offer_view' %}">My Offers</a></li>
+                    <li class="{% active '/my-trade' 'active' %}"><a href="{% url 'user_app:trade_view' %}">My Trade</a></li>
                     <!-- <li class="{% active '/product/add' 'active' %}"><a href="{% url 'user_app:add_product_view' %}">Add Product</a></li> -->
                     <!-- <li><a href="{% url 'user_app:offer_view' %}">View Offers</a></li> -->
                     <!-- <li><a href="checkout.html">Cart</a></li> -->
