--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -154,13 +154,13 @@
                             </a>
                         </div>
                         <div class="card-body">
-                            <h4 class="card-title text-center">Emmanuel Rabe</h4>
+                            <h4 class="card-title text-center">Emanuel Rabe</h4>
                             <p class="card-text text-center"><strong>Backend Developer</strong></p>
                             <p class="card-text text-md-left">
                               <b>Professional Goals:</b> <i>Web Developer</i> <br>
-                              <b>Hobbies:</b> Reading manhwa, Playing guitar, Watching movies <br>
-                              <b>Skills:</b> Team Player <br>
-                              <b>Areas of Expertise:</b> Python, Html, Css , Java, C <i>Python</i>
+                              <b>Hobbies:</b> Reading manhwa, Playing guitar, Watching movies, Reading Documentaries, Listening to Music, Exploring <br>
+                              <b>Skills:</b> Team Player, Adaptability skills, Multitasking, Good Communication skill <br>
+                              <b>Areas of Expertise:</b> Python, Html, Css , Java, C, PHP, C#, MySQL <i></i>
                             </p>
                         </div>
                         <hr>
