--- a/templates/my-products.html
+++ b/templates/my-products.html
@@ -2,8 +2,211 @@
 {% load static %}
 
 {% block content %}
+<!-- Bootstrap Font Icon CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-<h1>My Products</h1>
+    <style>
+        .product{
+            display: inline-block;
+            min-width: 50px;
+            height: 50px;
+            color: #000;
+            padding: 0 7px !important;
+            font-size: 24px;
+            line-height: 56px;
+            font-weight: 400;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .product:hover {
+            color: #fbb710;
+        }
+
+        .single-product-wrapper .product-img img {
+            height: 500px;
+            object-fit: cover;
+        }
+    </style>
+
+    <div class="shop_sidebar_area">
+
+        <!-- ##### Single Widget ##### -->
+        <div class="widget catagory mb-50">
+            <!-- Widget Title -->
+            <h6 class="widget-title mb-30">Catagories</h6>
+
+            <!--  Catagories  -->
+            <div class="catagories-menu">
+                <ul>
+                    <li class="active"><a href="{% url 'user_app:search_product_view' %}">All</a></li>
+                    {% for category in product %}
+                    <li><a href="{% url 'user_app:search_product_view' %}?category={{category.category.name}}">{{category.category.name}}</a></li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+
+        <!-- ##### Single Widget ##### -->
+        <div class="widget price mb-50">
+            <!-- Widget Title -->
+            <h6 class="widget-title mb-30">Price</h6>
+
+            <div class="widget-desc">
+                <div class="slider-range">
+                    <div data-min="10" data-max="1000" data-unit="$" class="slider-range-price ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all" data-value-min="10" data-value-max="1000" data-label-result="">
+                        <div class="ui-slider-range ui-widget-header ui-corner-all"></div>
+                        <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
+                        <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
+                    </div>
+                    <div class="range-price">10 - 1000 km</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="amado_product_area section-padding-100">
+        <div class="container-fluid">
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="product-topbar d-xl-flex align-items-end justify-content-between">
+                        <!-- Total Products -->
+                        <div class="total-products">
+                            <p>Showing 1-8 0f 25</p>
+                            <div class="view d-flex">
+                                <a href="#"><i class="fa fa-th-large" aria-hidden="true"></i></a>
+                                <a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                        <!-- Sorting -->
+                        <div class="product-sorting d-flex">
+                            <div class="sort-by-date d-flex align-items-center mr-15">
+                                <p>Sort by</p>
+                                <form action="#" method="get">
+                                    <select name="select" id="sortBydate">
+                                        <option value="value">Date</option>
+                                        <option value="value">Newest</option>
+                                        <option value="value">Popular</option>
+                                    </select>
+                                </form>
+                            </div>
+                            <div class="view-product d-flex align-items-center">
+                                <p>View</p>
+                                <form action="#" method="get">
+                                    <select name="select" id="viewProduct">
+                                        <option value="value">12</option>
+                                        <option value="value">24</option>
+                                        <option value="value">48</option>
+                                        <option value="value">96</option>
+                                    </select>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                {% for product in products %}
+                <!-- Single Product Area -->
+                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
+                    <div class="single-product-wrapper">
+                        <!-- Product Image -->
+                        <div class="product-img">
+                            <img src="{{product.image.url}}" alt=""> <!-- {% static 'img/product1.jpg' %} -->
+                            <!-- Hover Thumb -->
+                            <img class="hover-img" src="{% static 'images/clothes1.jpg' %}" alt="">
+                        </div>
+
+                        <!-- Product Description -->
+                        <div class="product-description d-flex align-items-center justify-content-between">
+                            <!-- Product Meta Data -->
+                            <div class="product-meta-data">
+                                <div class="line"></div>
+                                <p class="product-price">2.3km</p>
+                                <a href="{% url 'user_app:product_detail_view'%}">
+                                    <h6>{{product.product_name}}</h6>
+                                </a>
+                            </div>
+                            <!-- Ratings & Cart -->
+                            <div class="ratings-cart text-right">
+                                <div class="ratings">
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </div>
+                                <div class="cart">
+                                    <a href="{% url 'user_app:product_detail_view' %}" class="product"data-toggle="tooltip" data-placement="left" title="View Product"><i class="bi bi-eye-fill"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+                {% empty %}
+                    <h3>No photos...</h3>
+                {% endfor %}
+                <!-- Single Product Area -->
+                <div class="col-12 col-sm-6 col-md-12 col-xl-6">
+                    <div class="single-product-wrapper">
+                        <!-- Product Image -->
+                        <div class="product-img">
+                            <img src="{% static 'img/product4.jpg' %}" alt="">
+                            <!-- Hover Thumb -->
+                            <img class="hover-img" src="{% static 'img/product5.jpg' %}" alt="">
+                        </div>
+
+                        <!-- Product Description -->
+                        <div class="product-description d-flex align-items-center justify-content-between">
+                            <!-- Product Meta Data -->
+                            <div class="product-meta-data">
+                                <div class="line"></div>
+                                <p class="product-price">$180</p>
+                                <a href="product-details.html">
+                                    <h6>Modern Chair</h6>
+                                </a>
+                            </div>
+                            <!-- Ratings & Cart -->
+                            <div class="ratings-cart text-right">
+                                <div class="ratings">
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                    <i class="fa fa-star" aria-hidden="true"></i>
+                                </div>
+                                <div class="cart">
+                                    <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="img/core-img/cart.png" alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <!-- Pagination -->
+                    <nav aria-label="navigation">
+                        <ul class="pagination justify-content-end mt-50">
+                            <li class="page-item active"><a class="page-link" href="#">01.</a></li>
+                            <li class="page-item"><a class="page-link" href="#">02.</a></li>
+                            <li class="page-item"><a class="page-link" href="#">03.</a></li>
+                            <li class="page-item"><a class="page-link" href="#">04.</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- ##### Main Content Wrapper End ##### -->
 
 
 {% endblock content %}
