--- a/templates/products.html
+++ b/templates/products.html
@@ -22,6 +22,11 @@
         .product:hover {
             color: #fbb710;
         }
+
+        .single-product-wrapper .product-img img {
+            height: 500px;
+            object-fit: cover;
+        }
     </style>
 
     <div class="shop_sidebar_area">
