--- a/templates/add_offer.html
+++ b/templates/add_offer.html
@@ -81,7 +81,7 @@
                       </div>
                     </div>
                     <div class="col-12 mt-4">
-                      <input type="submit" class="btn btn-primary btn-block text-uppercase" value="Add Product Now">
+                      <input type="submit" class="btn btn-primary btn-block text-uppercase" value="Add Offer Now">
                     </div>
                   </form>
                   </div>
