--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -2,12 +2,18 @@
 {% load static %}
 
 {% block content %}
-
+<style>
+  .add-product-left{
+    margin-right: 70px;
+    margin-left: -30px;
+    margin-top: 100px;
+  }
+</style>
 <!-- Product Catagories Area Start -->
 <div class="products-catagories-area clearfix">
     <div class="amado-pro-catagory clearfix">
         <div class="container tm-mt-big tm-mb-big">
-            <div class="row">
+            <div class="row add-product-left">
               <div class="col-xl-9 col-lg-10 col-md-12 col-sm-12 mx-auto">
                 <div class="tm-bg-primary-dark tm-block tm-block-h-auto">
                   <div class="row">
