--- a/templates/products.html
+++ b/templates/products.html
@@ -24,8 +24,12 @@
         }
 
         .single-product-wrapper .product-img img {
-            height: 500px;
+            height: 380px;
             object-fit: cover;
+        }
+
+        .product-padding{
+            padding: 0px 10px 10px 10px;
         }
     </style>
 
@@ -65,7 +69,7 @@
         </div>
     </div>
 
-    <div class="amado_product_area section-padding-100">
+    <div class="amado_product_area section-padding-25-0">
         <div class="container-fluid">
 
             <div class="row">
@@ -120,7 +124,7 @@
                         </div>
 
                         <!-- Product Description -->
-                        <div class="product-description d-flex align-items-center justify-content-between">
+                        <div class="product-description d-flex align-items-center justify-content-between product-padding">
                             <!-- Product Meta Data -->
                             <div class="product-meta-data">
                                 <div class="line"></div>
