--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -184,7 +184,7 @@
                     <!-- Add to Cart Form -->
                     
                     <div class="cart-btn d-flex mb-50">
-                        <a href="{% url 'user_app:offer_view' %}" class="btn amado-btn mb-15"><i class="bi bi-plus-circle-fill"></i>&nbsp;Add Offer</a>
+                        <a href="{% url 'user_app:add_offer_view' %}" class="btn amado-btn mb-15"><i class="bi bi-plus-circle-fill"></i>&nbsp;Add Offer</a>
                         <a href="{% url 'user_app:offer_view' %}" class="view-offer" data-toggle="tooltip" data-placement="right" title="View Offers"><i class="bi bi-eye-fill"></i></a>
                         <a href="{% url 'user_app:offer_view' %}" class="chat-user" data-toggle="tooltip" data-placement="right" title="Chat User"><i class="bi bi-messenger"></i></a>
                     </div>
