--- a/templates/user_report.html
+++ b/templates/user_report.html
@@ -64,15 +64,47 @@
             <table class="table">
                 <thead>
                     
-                    <th>email</th>
-                    <th>message</th>
-                    <tbody>
+                    <th>Report ID</th>
+                    <th>Type of Report</th>
+                    <th>Date</th>
+                    <th>Action</th>
 
+                    <tbody>
                     {% for report in reports %}
 
                     <tr>
                     <td data-label="Email">{{report.name}}</td>
                     <td data-label="Message">{{report.message}}</td>
+                    <td>Date</td>
+                    <td>
+                        <!-- Trigger the modal with a button -->
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">View</button>
+                      
+                        <!-- Modal -->
+                        <div class="modal fade" id="myModal" role="dialog">
+                          <div class="modal-dialog">
+                          
+                            <!-- Modal content-->
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Reports</h4>
+                              </div>
+                              <div class="modal-body">
+                                <p>asdhajksdhjkqwheuashduqwheuias</p>
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                              </div>
+                            </div>
+     
+                          </div>
+                        </div>
+        
+                    </div>
+                    </div>
+
+                    </td>
                     {% endfor %}
                     </tr>
                 </tbody>
